<resources>
    <string name="app_name">JomRide</string>
    <string name="popup_distance"> Distance:</string>
    <string name="popup_transportation_type">Transportation type:</string>
    <string name="popup_duration"> Duration:</string>
    <string name="popup_startpoint">Start Point</string>
    <string name="popup_endpoint">End Point</string>
    <string name="popup_exitreceipt">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="walltehistorybuttonlabel">Transaction\nHistory</string>
    <string name="top_up_wallet">+ TOP UP</string>
    <string name="current_balance_wallet">Current Balance :</string>
    <string name="historylabel_wallet"><![CDATA[ History >]]></string>
    <string name="reminder_wallet">Make sure wallet has at least RM 10.00 before each ride</string>
    <string name="rm_topup">RM</string>
    <string name="enter_amount_topup">Enter amount:</string>
    <string name="top_up_button">TOP UP</string>
    <string name="filter">date filter</string>
</resources>